k8s/learn-helper/ingress-routes/learn-helper-api.ingress-route.yml
# /api/ - no cache header
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: learn-helper-api
  namespace: learn-helper
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && PathPrefix(`/api/`)
      kind: Rule
      priority: 20
      middlewares:
        - name: sec
        - name: ratelimit
        - name: compress
      services:
        - name: learn-helper
          port: http
