k8s/learn-helper/ingress-routes/learn-helper-favicon.ingress-route.yml
# /favicon.ico - 1-day cache
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: learn-helper-favicon
  namespace: learn-helper
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && Path(`/favicon.ico`)
      kind: Rule
      priority: 25
      middlewares:
        - name: sec
        - name: ratelimit
        - name: compress
        - name: cache-favicon
      services:
        - name: learn-helper
          port: http
